--- a/Pages/Checkout.razor
+++ b/Pages/Checkout.razor
@@ -13,6 +13,10 @@
 
             <div class="checkout-delivery-address">
                 <h4>Deliver to...</h4>
+                @if (isError)
+                {
+                    <div class="alert alert-danger">Please enter a name and address.</div>
+                }
                 <AddressEditor Address="Order.DeliveryAddress" />
             </div>
         </div>
@@ -26,11 +30,19 @@
 @code {
     Order Order => OrderState.Order;
     bool isSubmitting;
+    bool isError = false;
 
-    private async Task CheckSubmission()
+    private async Task CheckSubmission(EditContext editContext)
     {
         isSubmitting = true;
-        await PlaceOrder();
+        var model = editContext.Model as Address;
+        isError = string.IsNullOrWhiteSpace(model?.Name)
+        || string.IsNullOrWhiteSpace(model?.Line1)
+        || string.IsNullOrWhiteSpace(model?.PostalCode);
+        if (!isError)
+        {
+            await PlaceOrder();
+        }
         isSubmitting = false;
     }
 
